<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background= "@color/colorOne"
        tools:context=".Shop">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorThree"
              android:textColor="@color/colorFour"
              android:textAlignment="center"
              android:textSize="30sp"
              android:text="@string/themes"

              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintVertical_bias="0"/>

    <Button android:layout_width="192dp"
            android:layout_height="48dp"
            android:background="@color/colorTwo"
            android:textColor="@color/colorThree"
            android:textSize="20sp"
            android:text="@string/yellow_and_black"
            android:id="@+id/theme_of_game_one"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.1"/>

    <Button android:layout_width="192dp"
            android:layout_height="48dp"
            android:background="@color/colorTwo"
            android:textColor="@color/colorThree"
            android:textSize="20sp"
            android:text="@string/cyan_and_purple"
            android:id="@+id/theme_of_game_two"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintVertical_bias="0.188"/>

    <Button android:layout_width="192dp"
            android:layout_height="48dp"
            android:background="@color/colorTwo"
            android:textColor="@color/colorThree"
            android:textSize="20sp"
            android:text="@string/red_and_blue"
            android:id="@+id/theme_of_game_three"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintVertical_bias="0.278"/>

    <Button android:layout_width="192dp"
            android:layout_height="48dp"
            android:background="@color/colorTwo"
            android:textColor="@color/colorThree"
            android:textSize="20sp"
            android:text="@string/cherry_and_teal"
            android:id="@+id/theme_of_game_four"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintVertical_bias="0.37"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTwo"
            android:textColor="@color/colorThree"
            android:textSize="20sp"
            android:text="@string/main_menu_button"
            android:id="@+id/main_menu_button"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintVertical_bias="0.95"/>


</androidx.constraintlayout.widget.ConstraintLayout>