<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOne"
        tools:context=".Pause">


    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTwo"
            android:textColor="@color/colorOne"
            android:textSize="20sp"
            android:text="@string/return_button"
            android:id="@+id/return_button"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.05"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTwo"
            android:textColor="@color/colorOne"
            android:textSize="20sp"
            android:text="@string/level_select_button"
            android:id="@+id/level_select_button"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.15"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTwo"
            android:textColor="@color/colorOne"
            android:textSize="20sp"
            android:text="@string/main_menu_button"
            android:id="@+id/main_menu_button"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintVertical_bias="0.95"/>


</androidx.constraintlayout.widget.ConstraintLayout>